完成了设置账单类型功能

--- a/server/接口文档.md
+++ b/server/接口文档.md
@@ -346,7 +346,6 @@
     ]
 ```
 
-
 #### 2.3.5 查看收入类型的总金额
 
 - 请求路径： /income/type/sumMoney/:uid
@@ -406,7 +405,6 @@
         }
     ]
 ```
-
 
 ### 2.4 修改账单
 
@@ -479,3 +477,81 @@
 ```
     暂未测试
 ```
+
+## 3. 设置
+
+### 3.1 收入账单分类
+
+#### 3.1.1 添加收入账单分类
+
+- 路径： /incomeType
+- 请求方法： post
+  | 参数名称 | 参数说明 | 备注 |
+  | ------- | -------- | ---- |
+  | incomeType_name | 收入类型名称 | 不能为空 |
+  | incomeType_leave | 收入等级 | 不能为空 |
+  | incomeType_pid | 收入父级 | 不能为空 |
+
+- 响应参数
+
+```
+    暂未测试
+```
+
+#### 3.1.2 修改收入账单分类
+
+- 路径： /incomeType/:incomeType_id
+- 请求方法： put
+  | 参数名称 | 参数说明 | 备注 |
+  | ------- | -------- | ---- |
+  | incomeType_id | 收入类型 id | 不能为空，携带在 url 中 |
+  | incomeType_name | 收入类型名称 | 不能为空 |
+
+- 响应参数
+
+```
+    meta: {
+        status: 200,
+        meta: '修改收入类型数据成功'
+    }
+```
+
+### 3.2 支出账单分类
+
+#### 3.2.1 添加支出账单分类
+
+- 路径： /expendType
+- 请求方法： post
+  | 参数名称 | 参数说明 | 备注 |
+  | ------- | -------- | ---- |
+  | expendType_name | 收入类型名称 | 不能为空 |
+  | expendType_leave | 收入等级 | 不能为空 |
+  | expendType_pid | 收入父级 | 不能为空 |
+
+- 响应参数
+
+```
+    暂未测试
+```
+
+#### 3.2.2 修改支出账单分类
+
+- 路径： /expendType/:expendType_id
+- 请求方法： put
+  | 参数名称 | 参数说明 | 备注 |
+  | ------- | -------- | ---- |
+  | expendType_id | 支出类型 id | 不能为空，携带在 url 中 |
+  | expendType_name | 支出类型名称 | 不能为空 |
+
+- 响应参数
+
+```
+    meta: {
+        status: 200,
+        meta: '修改收入类型数据成功'
+    }
+```
+
+#### 3.1.1 添加支出账单分类
+
+#### 3.1.2 修改支出账单分类
