--- a/问题.md
+++ b/问题.md
@@ -19,3 +19,26 @@
 - 解决方法：
 
 1. 在 el-form-item 里定义多个 el-form-item 使用 prop
+
+
+## 首页模块（Index.vue + Home.vue）
+
+### 难点 1：侧边导航栏的区域，层次不一
+
+- 解决方法，使用了递归组件:
+  1.  在 components -> menu 文件夹下 定义了 MenuTree.vue 组件
+  2.  接收一个参数 menuData， 该参数为列表数据【数组】
+  3.  循环该数组，判断 children 是否为空，不为空则继续递归，为空则使用 `<el-menu-item></el-menu-item>` 标签
+  4.  在引入该组件，最后进行调用，然后传入参数即可
+
+### 难点 2：两个盒子使用动画照成僵硬
+
+- 解决方法，使用`transition-group`
+  1.  首先使用 `transition-group` 包裹两个盒子，然后分别对盒子绑定 key 属性
+  2.  定义好过渡的样式，最后定义 `v-move` 样式 3. 在 `v-leave-active` 样式里定义一个 `position:absolute;` 即可进行平滑过渡
+
+### 难点 3 ：使用 `v-move` 属性之后，会出现几个问题
+
+- 问题： 1. 因为 `position:absolute;` 的原因，当执行离开动画时，屏幕下方出现滚动条 2. 无法控制 元素离开后，在回来的起点位置， 元素会从上方返回，但设置的离开位置是`width:0`(一开始设置的是 `transform:translateX(-250px)`，回来起点位置在右上方)
+
+> 这个问题尚未解决
